# wpdm

./: .gitignore  Cargo.toml  PKGBUILD  install.sh  readme.md
src/: image_transition.rs  layer.rs  main.rs
wpdm/: Cargo.toml
wpdm-cli/: Cargo.toml
wpdm-cli/src/: main.rs
wpdm-common/: Cargo.toml
wpdm-common/src/: config.rs  lib.rs  serde_udp.rs
wpdm/src/: handler.rs  image_transition.rs  layer.rs  listener.rs  loader.rs  main.rs  util.rs  wallpaper.rs  wp_loader.rs
wpdm/src/transitions/: grow_circ.rs  mod.rs
