[workspace]
resolver = "3"
members = [ "wpdm", "wpdm-cli" , "wpdm-common"]

[workspace.dependencies]
tracing-subscriber = "0.3"
tracing = "0.1"
anyhow = "1.0"
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.1"
image = "0.25"
rayon = "1.11"
clap = { version = "4.5", features = [ "derive" ] }
postcard = { version = "1.1.3", features = [ "use-std" ] }
serde = { version = "1.0", features = [ "derive" ]}
rtrb = { version = "0.3.2" }
wpdm-common = { path = "./wpdm-common"}
sha2 = "0.10.9"
gcd = "2.3.0"
lz4 = "1.28.1"
