[package]
name = "wpdm-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
wpdm-common = { workspace = true }
tracing-subscriber = { workspace = true }
fast_image_resize = { workspace = true }
image = { workspace = true }
gcd = { workspace = true }
sha2 = { workspace = true }
